// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`scaffold buildDependencyList snapshot: memory-nats 1`] = `
[
  "@lindorm/proteus",
  "@lindorm/iris",
  "nats",
]
`;

exports[`scaffold buildDependencyList snapshot: none-none 1`] = `[]`;

exports[`scaffold buildDependencyList snapshot: postgres-rabbit 1`] = `
[
  "@lindorm/proteus",
  "pg",
  "@lindorm/iris",
  "amqplib",
]
`;

exports[`scaffold buildDependencyList snapshot: redis-redis 1`] = `
[
  "@lindorm/proteus",
  "ioredis",
  "@lindorm/iris",
  "ioredis",
]
`;

exports[`scaffold buildDependencyList snapshot: sqlite-kafka 1`] = `
[
  "@lindorm/proteus",
  "better-sqlite3",
  "@lindorm/iris",
  "kafkajs",
]
`;

exports[`scaffold buildEnvLines snapshot: mongo-nats 1`] = `
[
  "NODE_ENV=development",
  "PROTEUS_URL=mongodb://localhost:27017/app",
  "IRIS_SERVERS=localhost:4222",
]
`;

exports[`scaffold buildEnvLines snapshot: mysql-rabbit 1`] = `
[
  "NODE_ENV=development",
  "PROTEUS_URL=mysql://localhost:3306/app",
  "IRIS_URL=amqp://localhost:5672",
]
`;

exports[`scaffold buildEnvLines snapshot: none-none 1`] = `
[
  "NODE_ENV=development",
]
`;

exports[`scaffold buildEnvLines snapshot: sqlite-redis 1`] = `
[
  "NODE_ENV=development",
  "PROTEUS_URL=file:./data/app.db",
  "IRIS_URL=redis://localhost:6379",
]
`;

exports[`scaffold copyTemplates base + http + socket + workers + webhooks 1`] = `
[
  ".gitignore",
  "config/default.yml",
  "jest.config.ts",
  "src/handlers/create-webhook-handler.ts",
  "src/handlers/delete-webhook-handler.ts",
  "src/handlers/example-handler.ts",
  "src/handlers/get-webhook-handler.ts",
  "src/handlers/list-webhooks-handler.ts",
  "src/handlers/ping-handler.ts",
  "src/handlers/update-webhook-handler.ts",
  "src/index.ts",
  "src/listeners/_middleware.ts",
  "src/listeners/ping.ts",
  "src/logger/index.ts",
  "src/middleware/example.ts",
  "src/pylon/amphora.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/routes/webhooks/[id].ts",
  "src/routes/webhooks/_middleware.ts",
  "src/routes/webhooks/index.ts",
  "src/types/context.ts",
  "src/workers/alive.ts",
  "tsconfig.build.json",
  "tsconfig.json",
]
`;

exports[`scaffold copyTemplates base + http overlay 1`] = `
[
  ".gitignore",
  "config/default.yml",
  "jest.config.ts",
  "src/handlers/example-handler.ts",
  "src/index.ts",
  "src/logger/index.ts",
  "src/middleware/example.ts",
  "src/pylon/amphora.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/types/context.ts",
  "tsconfig.build.json",
  "tsconfig.json",
]
`;

exports[`scaffold copyTemplates base only — http false, socket false 1`] = `
[
  ".gitignore",
  "config/default.yml",
  "jest.config.ts",
  "src/index.ts",
  "src/logger/index.ts",
  "src/pylon/amphora.ts",
  "src/types/context.ts",
  "tsconfig.build.json",
  "tsconfig.json",
]
`;

exports[`scaffold scaffold orchestration runs all write functions in sequence 1`] = `
[
  ".env",
  ".gitignore",
  "config/default.yml",
  "docker-compose.yml",
  "jest.config.ts",
  "package.json",
  "src/handlers/create-webhook-handler.ts",
  "src/handlers/delete-webhook-handler.ts",
  "src/handlers/example-handler.ts",
  "src/handlers/get-webhook-handler.ts",
  "src/handlers/list-webhooks-handler.ts",
  "src/handlers/ping-handler.ts",
  "src/handlers/update-webhook-handler.ts",
  "src/index.ts",
  "src/iris/publishers/sample-publisher.ts",
  "src/iris/subscribers/sample-subscriber.ts",
  "src/listeners/_middleware.ts",
  "src/listeners/ping.ts",
  "src/logger/index.ts",
  "src/middleware/example.ts",
  "src/pylon/amphora.ts",
  "src/pylon/config.ts",
  "src/pylon/pylon.ts",
  "src/routes/_middleware.ts",
  "src/routes/v1/example.ts",
  "src/routes/webhooks/[id].ts",
  "src/routes/webhooks/_middleware.ts",
  "src/routes/webhooks/index.ts",
  "src/types/context.ts",
  "src/workers/alive.ts",
  "src/workers/amphora-refresh.ts",
  "src/workers/expiry-cleanup.ts",
  "tsconfig.build.json",
  "tsconfig.json",
]
`;

exports[`scaffold writeConfigFile snapshot: kafka only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  irisBrokers: z.string().transform((s) => s.split(",")),
});
"
`;

exports[`scaffold writeConfigFile snapshot: memory proteus only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
});
"
`;

exports[`scaffold writeConfigFile snapshot: mongo + nats 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  proteusUrl: z.string(),
  irisServers: z.string(),
});
"
`;

exports[`scaffold writeConfigFile snapshot: nats only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  irisServers: z.string(),
});
"
`;

exports[`scaffold writeConfigFile snapshot: no drivers 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
});
"
`;

exports[`scaffold writeConfigFile snapshot: postgres + kafka 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  proteusUrl: z.string(),
  irisBrokers: z.string().transform((s) => s.split(",")),
});
"
`;

exports[`scaffold writeConfigFile snapshot: postgres only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  proteusUrl: z.string(),
});
"
`;

exports[`scaffold writeConfigFile snapshot: rabbit only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  irisUrl: z.string(),
});
"
`;

exports[`scaffold writeConfigFile snapshot: redis only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  irisUrl: z.string(),
});
"
`;

exports[`scaffold writeConfigFile snapshot: sqlite only 1`] = `
"import { configuration } from "@lindorm/config";
import { z } from "zod/v4";

export const config = configuration({
  server: z.object({ port: z.number() }),
  proteusUrl: z.string(),
});
"
`;

exports[`scaffold writeDockerCompose snapshot: iris redis 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold writeDockerCompose snapshot: kafka + zookeeper 1`] = `
"services:
  zookeeper:
    image: confluentinc/cp-zookeeper:latest
    restart: unless-stopped
    environment:
      ZOOKEEPER_CLIENT_PORT: 2181
      ZOOKEEPER_TICK_TIME: 2000
    ports:
      - "2181:2181"
  kafka:
    image: confluentinc/cp-kafka:latest
    restart: unless-stopped
    depends_on:
      - zookeeper
    environment:
      KAFKA_BROKER_ID: 1
      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
    ports:
      - "9092:9092"
"
`;

exports[`scaffold writeDockerCompose snapshot: mongo + kafka 1`] = `
"services:
  mongo:
    image: mongo:7
    restart: unless-stopped
    ports:
      - "27017:27017"
  zookeeper:
    image: confluentinc/cp-zookeeper:latest
    restart: unless-stopped
    environment:
      ZOOKEEPER_CLIENT_PORT: 2181
      ZOOKEEPER_TICK_TIME: 2000
    ports:
      - "2181:2181"
  kafka:
    image: confluentinc/cp-kafka:latest
    restart: unless-stopped
    depends_on:
      - zookeeper
    environment:
      KAFKA_BROKER_ID: 1
      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
    ports:
      - "9092:9092"
"
`;

exports[`scaffold writeDockerCompose snapshot: mongo 1`] = `
"services:
  mongo:
    image: mongo:7
    restart: unless-stopped
    ports:
      - "27017:27017"
"
`;

exports[`scaffold writeDockerCompose snapshot: mysql 1`] = `
"services:
  mysql:
    image: mysql:8
    restart: unless-stopped
    environment:
      MYSQL_DATABASE: app
      MYSQL_ROOT_PASSWORD: root
    ports:
      - "3306:3306"
"
`;

exports[`scaffold writeDockerCompose snapshot: nats 1`] = `
"services:
  nats:
    image: nats:2
    restart: unless-stopped
    ports:
      - "4222:4222"
"
`;

exports[`scaffold writeDockerCompose snapshot: postgres + rabbit 1`] = `
"services:
  postgres:
    image: postgres:16
    restart: unless-stopped
    environment:
      POSTGRES_DB: app
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
    ports:
      - "5432:5432"
  rabbitmq:
    image: rabbitmq:3-management
    restart: unless-stopped
    ports:
      - "5672:5672"
      - "15672:15672"
"
`;

exports[`scaffold writeDockerCompose snapshot: postgres 1`] = `
"services:
  postgres:
    image: postgres:16
    restart: unless-stopped
    environment:
      POSTGRES_DB: app
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
    ports:
      - "5432:5432"
"
`;

exports[`scaffold writeDockerCompose snapshot: proteus redis 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold writeDockerCompose snapshot: rabbit 1`] = `
"services:
  rabbitmq:
    image: rabbitmq:3-management
    restart: unless-stopped
    ports:
      - "5672:5672"
      - "15672:15672"
"
`;

exports[`scaffold writeDockerCompose snapshot: redis dedup 1`] = `
"services:
  redis:
    image: redis:7
    restart: unless-stopped
    ports:
      - "6379:6379"
"
`;

exports[`scaffold writeEnvFile none drivers 1`] = `
"NODE_ENV=development
"
`;

exports[`scaffold writeEnvFile postgres + kafka 1`] = `
"NODE_ENV=development
PROTEUS_URL=postgresql://localhost:5432/app
IRIS_BROKERS=localhost:9092
"
`;

exports[`scaffold writeIrisSamples snapshot: kafka publisher + subscriber: publisher 1`] = `
"import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold writeIrisSamples snapshot: kafka publisher + subscriber: subscriber 1`] = `
"import { logger } from "../../logger";
import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold writeIrisSamples snapshot: nats publisher + subscriber: publisher 1`] = `
"import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold writeIrisSamples snapshot: nats publisher + subscriber: subscriber 1`] = `
"import { logger } from "../../logger";
import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold writeIrisSamples snapshot: rabbit publisher + subscriber: publisher 1`] = `
"import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold writeIrisSamples snapshot: rabbit publisher + subscriber: subscriber 1`] = `
"import { logger } from "../../logger";
import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold writeIrisSamples snapshot: redis publisher + subscriber: publisher 1`] = `
"import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const publisher = irisSource.publisher(SampleMessage);

export const publishSample = async (
  payload: Partial<SampleMessage> = {},
): Promise<void> => {
  await publisher.publish(publisher.create(payload));
};
"
`;

exports[`scaffold writeIrisSamples snapshot: redis publisher + subscriber: subscriber 1`] = `
"import { logger } from "../../logger";
import { source as irisSource } from "../source";
import { SampleMessage } from "../messages/SampleMessage";

const bus = irisSource.messageBus(SampleMessage);

export const subscribeSample = async (): Promise<void> => {
  await bus.subscribe({
    topic: "SampleMessage",
    queue: "sample-queue",
    callback: async (msg) => {
      logger.info("Received sample message", { message: msg });
    },
  });
};
"
`;

exports[`scaffold writePackageJson adds docker scripts when driver needs compose 1`] = `
"{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "engines": {
    "node": ">=20"
  },
  "scripts": {
    "dev": "tsx watch src/index.ts",
    "build": "tsc -p tsconfig.build.json",
    "start": "node dist/index.js",
    "typecheck": "tsc --noEmit",
    "test": "jest",
    "docker:up": "docker compose up -d",
    "docker:down": "docker compose down"
  },
  "dependencies": {},
  "devDependencies": {}
}
"
`;

exports[`scaffold writePackageJson default answers produce minimal package.json 1`] = `
"{
  "name": "test-app",
  "version": "0.0.0",
  "private": true,
  "engines": {
    "node": ">=20"
  },
  "scripts": {
    "dev": "tsx watch src/index.ts",
    "build": "tsc -p tsconfig.build.json",
    "start": "node dist/index.js",
    "typecheck": "tsc --noEmit",
    "test": "jest"
  },
  "dependencies": {},
  "devDependencies": {}
}
"
`;

exports[`scaffold writePylonFile snapshot: all features + all proteus workers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";
import { source as proteusSource } from "../proteus/source";
import { source as irisSource } from "../iris/source";
import amphoraRefreshWorker from "../workers/amphora-refresh";
import amphoraEntitySyncWorker from "../workers/amphora-entity-sync";
import expiryCleanupWorker from "../workers/expiry-cleanup";
import kryptosRotationWorker from "../workers/kryptos-rotation";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  socket: {
    enabled: true,
    listeners: "./src/listeners",
  },
  rooms: { presence: true },
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  webhook: { enabled: true },
  audit: {
    enabled: true,
    actor: (ctx) => (ctx.state as any).subject ?? "anonymous",
    // sanitise: (body) => body,
    // skip: (ctx) => false,
    // entities: [],
  },
  workers: [
    amphoraRefreshWorker,
    amphoraEntitySyncWorker,
    expiryCleanupWorker,
    kryptosRotationWorker,
  ],
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http + postgres + rabbit + webhooks + audit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";
import { source as proteusSource } from "../proteus/source";
import { source as irisSource } from "../iris/source";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  webhook: { enabled: true },
  audit: {
    enabled: true,
    actor: (ctx) => (ctx.state as any).subject ?? "anonymous",
    // sanitise: (body) => body,
    // skip: (ctx) => false,
    // entities: [],
  },
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http + postgres + rabbit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";
import { source as proteusSource } from "../proteus/source";
import { source as irisSource } from "../iris/source";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  proteus: proteusSource,
  kryptos: { enabled: true },
  iris: irisSource,
  queue: { enabled: true },
  setup: async () => {
    await proteusSource.connect();
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http + postgres 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";
import { source as proteusSource } from "../proteus/source";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  proteus: proteusSource,
  kryptos: { enabled: true },
  setup: async () => {
    await proteusSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http + rabbit 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";
import { source as irisSource } from "../iris/source";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  iris: irisSource,
  queue: { enabled: true },
  setup: async () => {
    await irisSource.connect();
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http + socket, no drivers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  socket: {
    enabled: true,
    listeners: "./src/listeners",
  },
  rooms: { presence: true },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: http only, no drivers, no workers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  routes: "./src/routes",
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writePylonFile snapshot: socket only, no drivers 1`] = `
"import { Pylon } from "@lindorm/pylon";
import { logger } from "../logger";
import { amphora } from "./amphora";
import { config } from "./config";

export const pylon = new Pylon({
  logger,
  amphora,
  port: config.server.port,
  socket: {
    enabled: true,
    listeners: "./src/listeners",
  },
  rooms: { presence: true },
  setup: async () => {
  },
  teardown: async () => {
    // pylon handles proteus/iris disconnect automatically
  },
});
"
`;

exports[`scaffold writeWorkerFiles snapshot: all four: amphora-entity-sync content 1`] = `
"import { createAmphoraEntityWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora";
import { source as proteusSource } from "../proteus/source";

export default createAmphoraEntityWorker({ amphora, proteus: proteusSource });
"
`;

exports[`scaffold writeWorkerFiles snapshot: all four: amphora-refresh content 1`] = `
"import { createAmphoraRefreshWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora";

export default createAmphoraRefreshWorker({ amphora });
"
`;

exports[`scaffold writeWorkerFiles snapshot: all four: expiry-cleanup content 1`] = `
"import { createExpiryCleanupWorker } from "@lindorm/pylon";
import { source as proteusSource } from "../proteus/source";

// TODO: add your entities with expiry fields to this array
export default createExpiryCleanupWorker({ proteus: proteusSource, targets: [] });
"
`;

exports[`scaffold writeWorkerFiles snapshot: all four: kryptos-rotation content 1`] = `
"import { createKryptosRotationWorker } from "@lindorm/pylon";
import { source as proteusSource } from "../proteus/source";

export default createKryptosRotationWorker({ proteus: proteusSource });
"
`;

exports[`scaffold writeWorkerFiles snapshot: amphora-entity-sync only: amphora-entity-sync content 1`] = `
"import { createAmphoraEntityWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora";
import { source as proteusSource } from "../proteus/source";

export default createAmphoraEntityWorker({ amphora, proteus: proteusSource });
"
`;

exports[`scaffold writeWorkerFiles snapshot: amphora-refresh only: amphora-refresh content 1`] = `
"import { createAmphoraRefreshWorker } from "@lindorm/pylon";
import { amphora } from "../pylon/amphora";

export default createAmphoraRefreshWorker({ amphora });
"
`;

exports[`scaffold writeWorkerFiles snapshot: expiry-cleanup only: expiry-cleanup content 1`] = `
"import { createExpiryCleanupWorker } from "@lindorm/pylon";
import { source as proteusSource } from "../proteus/source";

// TODO: add your entities with expiry fields to this array
export default createExpiryCleanupWorker({ proteus: proteusSource, targets: [] });
"
`;

exports[`scaffold writeWorkerFiles snapshot: kryptos-rotation only: kryptos-rotation content 1`] = `
"import { createKryptosRotationWorker } from "@lindorm/pylon";
import { source as proteusSource } from "../proteus/source";

export default createKryptosRotationWorker({ proteus: proteusSource });
"
`;
